Adaptation for 2019